fix: dark mode colors

--- a/frontend/src/css/custom.css
+++ b/frontend/src/css/custom.css
@@ -19,9 +19,9 @@
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
   --ifm-color-primary: #00b9b9;
-  --ifm-color-primary-dark: #008080;
+  --ifm-color-primary-dark: #00a6a6;
   --ifm-color-primary-darker: #009494;
-  --ifm-color-primary-darkest: #1a8870;
+  --ifm-color-primary-darkest: #008080;
   --ifm-color-primary-light: #00b9b9;
   --ifm-color-primary-lighter: #00cbcb;
   --ifm-color-primary-lightest: #00dede;
